adding header files

--- a/ai/Makefile
+++ b/ai/Makefile
@@ -4,7 +4,7 @@ a: a.o
 # now define how each object file is a target and list dependencies and how
 #  to build that object file if any dependencies change
 
-account.o: account.cc 
-	g++ -c account.cc
+a.o: a.cc 
+	g++ -c a.cc util.h strategy.h dfs.h bfs.h astar.h
 clean:
 	rm a a.o
