adding back end support for spatial queries , wrote test cases for them

--- a/database_systems/.classpath
+++ b/database_systems/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry exported="true" kind="lib" path="libs/classes12.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
+	<classpathentry kind="lib" path="/home/jude/Data/study/database_systems/homework/home_work_3/sdoapi.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
