--- a/database_systems/.classpath
+++ b/database_systems/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry exported="true" kind="lib" path="libs/classes12.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/3"/>
 	<classpathentry kind="lib" path="/home/jude/Data/study/database_systems/homework/home_work_3/sdoapi.jar"/>
+	<classpathentry kind="con" path="org.dyno.visual.swing.VS_LIBRARY/layoutext"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
