--- a/ai/assignment2/Makefile
+++ b/ai/assignment2/Makefile
@@ -1,7 +1,7 @@
-a2.exe: a2.o 
-	g++ -g -o a2.exe a2.o 
+CS561A2.exe: CS561A2.o 
+	g++ -o CS561A2.exe CS561A2.o 
 
-a2.o: a2.cc 
-	g++ -g -c a2.cc 
+CS561A2.o: CS561A2.cc 
+	g++ -c CS561A2.cc 
 clean:
-	rm a2.exe a2.o
+	rm CS561A2.exe CS561A2.o
